--- a/index.html
+++ b/index.html
@@ -55,11 +55,58 @@
         .section {
             padding: 5rem 0;
         }
+
+        .hero {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 2rem;
+            position: relative;
+            background: var(--bg-primary);
+        }
+
+        .hero h1 {
+            font-size: clamp(2rem, 5vw, 3.5rem);
+            color: var(--gold);
+            max-width: 900px;
+            margin-bottom: 1rem;
+            line-height: 1.3;
+        }
+
+        .hero .subtitle {
+            color: var(--text-secondary);
+            font-size: 1.1rem;
+            max-width: 700px;
+            font-style: italic;
+            line-height: 1.6;
+        }
+
+        .scroll-arrow {
+            position: absolute;
+            bottom: 2rem;
+            color: var(--gold);
+            font-size: 2rem;
+            opacity: 0.6;
+            animation: bounce 2s infinite ease-in-out;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(10px); }
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Test</h1>
-    </div>
+    <section class="hero">
+        <h1>Maîtriser l'IA : Guide Stratégique Complet pour l'Élite Professionnelle</h1>
+        <div class="gold-line"></div>
+        <p class="subtitle">Document consolidé regroupant le Cadre Stratégique Opérationnel, le Lexique Conceptuel, le Protocole de Production et les 9 Compétences Stratégiques.</p>
+        <a href="#section-1" class="scroll-arrow">&#8964;</a>
+    </section>
 </body>
 </html>
