feat: add content sections 5-8

--- a/index.html
+++ b/index.html
@@ -454,6 +454,107 @@
       </div>
     </section>
 
+    <!-- SECTION 5 -->
+    <section class="section fade-in" id="section-5">
+      <div class="container">
+        <div class="section-header">
+          <span class="section-number">05</span>
+          <h2>Le Cycle d'Itération : La Discipline de la « Bataille » Créative</h2>
+        </div>
+        <p>Le sommet de la pyramide de performance ne se satisfait jamais du premier résultat. Le top 1 % des utilisateurs ne se contente jamais du premier jet. La complaisance est le piège des utilisateurs médiocres. L'élite « se bat » avec l'IA, sculptant l'output comme de l'argile. L'IA produit une « pièce d'argile » ; l'expert est celui qui sait la façonner.</p>
+        <p>L'itération est un processus de sculpture agressif et un raffinement progressif, pas une simple répétition. L'exemple le plus frappant est celui de la publicité de Noël de <strong>Coca-Cola</strong> : <strong>70 000 prompts</strong> générés par seulement 5 experts pour atteindre la perfection. C'est ce niveau d'exigence qui sépare l'expérimentation de la domination.</p>
+
+        <h3>Tactiques de Raffinement Stratégique</h3>
+        <ul>
+          <li><strong>Feedback Structurel vs Vague :</strong> Ne demandez jamais à l'IA d'être « plus percutante ». Donnez des ordres de structure : « Ouvre avec un <em>reframe</em> (recadrage) puissant qui adresse les points X, Y et Z. »</li>
+          <li><strong>Communication spécifique :</strong> Utilisez un vocabulaire précis. Demandez un ton de « leader » plutôt que de « patron ». Chaque nuance lexicale modifie la trajectoire du modèle.</li>
+        </ul>
+
+        <h3>Stabilisation par le « Canvas »</h3>
+        <p>Pour le raffinement de haute précision, utilisez la fonctionnalité <strong>Canvas</strong>. Elle permet de <strong>verrouiller (<em>lock in</em>)</strong> les 90 % de votre document qui sont parfaits et d'effectuer des ajustements manuels ou des micro-itérations sur les 10 % restants, sur des segments spécifiques, sans dénaturer l'ensemble par une nouvelle génération globale.</p>
+        <p>C'est l'outil de stabilisation indispensable pour passer de l'artisanat à la production à grande échelle. Cette approche chirurgicale garantit que l'IA ne modifie pas ce que vous avez déjà validé, transformant l'itération en un processus industriel de haute précision.</p>
+        <p><strong>L'effet multiplicateur :</strong> Une fois le style parfait, ordonnez à l'IA :</p>
+        <blockquote>« Utilise ce format et ce ton comme modèle pour générer les 10 prochains éléments. »</blockquote>
+        <p>C'est le verrouillage de style ultime.</p>
+        <p><em>Chaque victoire itérative doit ensuite être codifiée pour devenir un actif réutilisable.</em></p>
+      </div>
+    </section>
+
+    <!-- SECTION 6 -->
+    <section class="section fade-in" id="section-6">
+      <div class="container">
+        <div class="section-header">
+          <span class="section-number">06</span>
+          <h2>Les Prompts Système : La Programmation par les Mots</h2>
+        </div>
+        <p>Nous entrons dans l'ère où <strong>le langage devient le code de programmation</strong>. Nous vivons une révolution : le langage naturel est le nouveau code informatique. Tout leader est désormais un « programmeur d'IA ». Un « System Prompt » n'est pas une simple consigne, c'est un <strong>micro-logiciel linguistique</strong> qui définit le comportement autonome de l'IA. Le <strong>Prompt Système</strong> est votre outil de codification comportementale.</p>
+
+        <h3>L'Inversion de Prompt (Le « Pro-Move »)</h3>
+        <p>Une fois qu'un résultat exceptionnel est obtenu après plusieurs itérations, utilisez ce « pro-move » : demandez à l'IA de :</p>
+        <blockquote>« Rédige le System Prompt qui aurait généré cet output exact du premier coup. »</blockquote>
+        <p>Ce System Prompt est le <strong>code source de votre efficience</strong>. Vous venez de transformer un succès ponctuel en un outil réutilisable à l'infini. Enregistrez-le en PDF pour le partager.</p>
+
+        <h3>Custom GPTs de Spécialité</h3>
+        <p>Transformez ces instructions en <strong>composants d'équipe</strong>. Intégrez cette logique dans un <strong>Custom GPT</strong> pour standardiser la production de votre équipe. Par exemple, un <strong>« Book Architect »</strong> peut automatiser des recherches massives et structurer un ouvrage complet en conservant votre ton spécifique. Vous créez ainsi un composant réutilisable garantissant une cohérence absolue sans votre intervention constante.</p>
+
+        <h3>Portabilité PDF</h3>
+        <p>Stocker ces prompts systèmes en PDF permet de migrer vos outils entre les plateformes sans perdre en efficacité, car <strong>« toutes les IA parlent une langue similaire »</strong>.</p>
+        <p>Mais attention : une machine trop obéissante devient dangereuse. C'est pourquoi l'IA doit aussi servir de <strong>critique stratégique</strong>.</p>
+      </div>
+    </section>
+
+    <!-- SECTION 7 -->
+    <section class="section fade-in" id="section-7">
+      <div class="container">
+        <div class="section-header">
+          <span class="section-number">07</span>
+          <h2>L'IA comme Critique Stratégique</h2>
+        </div>
+        <p>L'IA est par défaut un « flatteur » (<em>people pleaser</em>). Pour un stratège, cette complaisance est un <strong>angle mort critique</strong>. Le danger majeur est sa nature complaisante. Le stratège doit forcer l'outil à devenir son avocat du diable pour exposer ses angles morts psychologiques et décisionnels. Vous devez forcer l'IA à exposer vos faiblesses psychologiques et stratégiques.</p>
+
+        <h3>Le Protocole de l'Avocat du Diable</h3>
+        <p>Ne cherchez pas la validation. Commandez au modèle de stresser vos hypothèses et de lister chaque risque potentiel avec une honnêteté brutale :</p>
+        <blockquote>« Agis comme l'avocat du diable et attaque mes hypothèses. »</blockquote>
+        <p>Forcez l'IA à exposer vos angles morts et à lister les risques critiques de votre stratégie.</p>
+
+        <h3>Analyse par les Premiers Principes (First Principles)</h3>
+        <p>Utilisez l'IA pour décomposer vos hypothèses selon les <strong>« Premiers Principes » de la physique</strong> et de la logique, plutôt que par analogie. Cela consiste à déconstruire les hypothèses jusqu'à leurs vérités fondamentales pour reconstruire une solution basée sur des faits bruts plutôt que sur des analogies bancales :</p>
+        <blockquote>« Décompose tes critiques selon les "Premiers Principes" (First Principles) pour identifier les vérités fondamentales et m'aider à reconstruire une solution solide. »</blockquote>
+        <p>Cette méthode élimine les angles morts psychologiques et reconstruit une logique inattaquable.</p>
+
+        <h3>Le Prompt de Vérité Psychologique</h3>
+        <p>Intégrez des prompts de confrontation brutale comme cette commande d'élite :</p>
+        <blockquote>« Dis-moi ce que je dois savoir sur ma psychologie qui me freine et que je ne t'ai jamais demandé. »</blockquote>
+        <p>La réponse sera inconfortable, mais elle est la clé de votre croissance et éclairera le chemin vers votre prochaine percée.</p>
+
+        <h3>La Boucle de Réintégration</h3>
+        <p>Chaque fois qu'une critique de l'IA révèle une vérité profonde ou un nouveau principe de décision, capturez cet insight, <strong>mettez à jour votre PDF de Master Prompt</strong> et re-téléversez-le. Votre identité numérique apprend et évolue ainsi en continu. Réintégrez systématiquement ces insights dans votre Master Prompt pour une amélioration continue de votre système.</p>
+      </div>
+    </section>
+
+    <!-- SECTION 8 -->
+    <section class="section fade-in" id="section-8">
+      <div class="container">
+        <div class="section-header">
+          <span class="section-number">08</span>
+          <h2>Compression de Contexte : Maîtriser le Flux de Données</h2>
+        </div>
+        <p>La charge cognitive (le contexte) est la limite physique de l'IA. Les modèles ont des limites cognitives. Donner trop d'informations peut paralyser l'IA, générer de la confusion ou des hallucinations. Pour traiter des volumes massifs (jusqu'à 2 millions de mots — comme le projet « Dan AI »), vous devez distiller la donnée et appliquer un protocole de <strong>pré-compression</strong> pour maintenir la pureté de la source de vérité.</p>
+
+        <h3>Checklist de Compression de Contexte</h3>
+        <ol>
+          <li><strong>Injection massive / brute :</strong> Fournissez vos transcriptions, rapports et données brutes en vrac.</li>
+          <li><strong>Commande de réduction / Distillation à 10 % :</strong> Ordonnez une compression à <strong>10 % de la taille originale</strong> (ex: 2 millions de mots → 200 000 mots). Utilisez la commande :
+            <blockquote>« Résume ce contenu en gardant uniquement les faits clés, les données chiffrées et les histoires essentielles. Réduis le volume à 10 % de l'original. »</blockquote>
+            Exigez des <em>bullet points</em> focalisés sur les faits clés, les chiffres et les histoires essentielles.</li>
+          <li><strong>Audit de perte / des lacunes (Safety Check) :</strong> C'est le point de contrôle stratégique. Demandez explicitement :
+            <blockquote>« Qu'as-tu retiré de l'information originale ? Liste-le moi. Qu'est-ce qui manque par rapport à l'original ? Donne-moi l'option de réintégrer ces éléments. »</blockquote>
+            Cette étape est vitale pour s'assurer qu'aucune nuance stratégique ou donnée critique n'a été sacrifiée dans le processus de synthèse.</li>
+          <li><strong>Nouveau départ :</strong> Ouvrez une fenêtre propre et injectez uniquement cette « connaissance compressée » comme base de travail. Utilisez ce résultat compressé comme l'unique source de contexte pour vos futurs prompts.</li>
+        </ol>
+      </div>
+    </section>
+
     </main>
 
 </body>
