--- a/index.html
+++ b/index.html
@@ -645,5 +645,54 @@
       </div>
     </footer>
 
+<script>
+    // Feature A: Show/hide nav on scroll past hero
+    const navbar = document.getElementById('navbar');
+    const hero = document.querySelector('.hero');
+    const heroObserver = new IntersectionObserver(([entry]) => {
+        navbar.classList.toggle('visible', !entry.isIntersecting);
+    }, { threshold: 0.1 });
+    heroObserver.observe(hero);
+
+    // Feature B: Fade-in sections on scroll
+    const fadeEls = document.querySelectorAll('.fade-in');
+    const fadeObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('visible');
+            }
+        });
+    }, { threshold: 0.1 });
+    fadeEls.forEach(el => fadeObserver.observe(el));
+
+    // Feature C: Active nav link on scroll
+    const sections = document.querySelectorAll('.section[id]');
+    const navLinks = document.querySelectorAll('.nav a');
+    const sectionObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                navLinks.forEach(link => link.classList.remove('active'));
+                const activeLink = document.querySelector('.nav a[href="#' + entry.target.id + '"]');
+                if (activeLink) activeLink.classList.add('active');
+            }
+        });
+    }, { threshold: 0.3 });
+    sections.forEach(s => sectionObserver.observe(s));
+
+    // Feature D: Hamburger menu toggle (mobile)
+    const hamburger = document.getElementById('hamburger');
+    const navInner = document.getElementById('nav-inner');
+    hamburger.addEventListener('click', () => {
+        navInner.classList.toggle('open');
+    });
+
+    // Close mobile nav when clicking a link
+    navLinks.forEach(link => {
+        link.addEventListener('click', () => {
+            navInner.classList.remove('open');
+        });
+    });
+</script>
+
 </body>
 </html>
