--- a/index.html
+++ b/index.html
@@ -290,6 +290,74 @@
             background: var(--bg-tertiary);
             font-size: 0.9rem;
         }
+
+        /* Mobile responsive */
+        @media (max-width: 768px) {
+            .nav {
+                position: fixed;
+            }
+
+            .nav-inner {
+                display: none;
+                flex-direction: column;
+                padding: 1rem;
+                width: 100%;
+            }
+
+            .nav-inner.open {
+                display: flex;
+            }
+
+            .nav a {
+                padding: 0.75rem 1rem;
+                font-size: 0.9rem;
+            }
+
+            .hamburger {
+                display: block;
+            }
+
+            .hero h1 {
+                font-size: 1.8rem;
+            }
+
+            .hero .subtitle {
+                font-size: 0.95rem;
+            }
+
+            .section-number {
+                font-size: 2rem;
+            }
+
+            .section-header {
+                flex-direction: column;
+                gap: 0.25rem;
+            }
+
+            .container {
+                padding: 0 1.25rem;
+            }
+
+            .section {
+                padding: 3rem 0;
+            }
+
+            .table-wrap {
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+
+            blockquote {
+                padding: 0.75rem 1rem;
+                font-size: 0.95rem;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .hamburger {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
